[package]
name = "grust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12.4", features = ["json", "rustls-tls", "gzip", "stream", "cookies"] }
serde = { version = "1.0", features = ["derive"] }
protobuf = "3.4.0"
protobuf-json-mapping = "3.4.0"
protobuf-codegen = "3.4.0"
pblite_rust = {path = "../pblite-rust"}
rand = "0.8.5"
ring = "0.17.8"
aes-gcm = "0.10.3"
uuid = { version = "1.8.0", features = ["v4"] }
jsonwebkey = { version = "0.3.5", features = ["generate", "pkcs-convert"] }
hex = "0.4.3"
serde_json = "1.0.117"
google-jwt-auth = "0.1.0"
base64 = "0.22.1"
headless_chrome = "1.0.10"
x509-cert = { version = "0.2.5", features = ["pem"] }
qrcode = "0.14.1"
image = "0.25.1"
anyhow = "1.0.86"
futures-util = "0.3.30"

[build-dependencies]
protobuf-codegen = "3.4.0"
